@@ -72,6 +72,13 @@ option "mi" -
   argoptional
   optional
 
+option "resultFile" r
+  "Results output."
+  string
+  typestr="FILENAME"
+  argoptional
+  optional
+
 option "pnml" -
   "Read open nets in PNML file format."
   details="Using this option, the input file is expected to be in a PNML file format that is slightly extended to specify the interface and final markings."
